# nw_bot

./: .gitignore  .pre-commit-config.yaml  Makefile  _bot.py  installer.nsi  main.py  nwbot.spec  pyproject.toml  readme.md  requirements.txt  style.qss
.github/workflows/: build.yaml  test.yaml
bot/: main.py
bot/core/: KeystrokeAdapter.py  __init__.py  constants.py  control.py  keystroke_adapter.py  mouse_adapter.py  recorder.py  worker.py
bot/i18n/: nw_bot_fr.ts
bot/models/: __init__.py  base_command.py  base_model.py  command_list.py  commands.py  commands_model.py  keyboard.py  keys_model.py  mouse.py  params.py  timer.py
bot/ui/: __init__.py  delegates.py  main_window.py  main_window.ui  main_window_ui.py  mainwindow.py  mainwindow.ui  modals.py  record.py  validators.py
bot/ui/handlers/: __init__.py  command_handler.py  config_handler.py  record_handler.py
bot/ui/mixins/: __init__.py  config.py  event.py  record.py
bot/utils/: __init__.py  config.py  format_time.py  logger.py  settings_manager.py
core/: control.py  worker.py
tests/: conftest.py
tests/core/: test_control.py  test_keystroke_adapter.py  test_mouse_adapter.py  test_recorder.py  test_worker.py
tests/models/: test_commands.py  test_models.py
tests/res/: nwbot_config.json  nwbot_config.txt  test.json  test_2.txt  test_3.txt
tests/ui/: test_validators.py
tests/utils/: test_config.py  test_format_time.py  test_settings_manager.py
