[project]
name = "nw-bot"
readme = { file = "README.txt", content-type = "text/markdown" }
requires-python = "==3.12.*"
dynamic = ["version"]
dependencies = [
    "altgraph==0.17.4",
    "Nuitka==2.6.8",
    "ordered-set==4.1.0",
    "packaging==25.0",
    "pefile==2023.2.7",
    "pyinstaller==6.14.2",
    "pyinstaller-hooks-contrib==2025.5",
    "PySide6==6.9.1",
    "PySide6_Addons==6.9.1",
    "PySide6_Essentials==6.9.1",
    "pywin32-ctypes==0.2.3",
    "shiboken6==6.9.1",
    "zstandard==0.23.0",
    "pynput==1.8.1",
]

[build-system]
requires = ["setuptools>=80.9.0", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
test = ["pytest==8.4.1", "pytest-cov==6.2.1", "pre_commit==4.3.0"]

[tool.setuptools_scm]

[tool.pytest.ini_options]
testpaths = "tests"
pythonpath = "bot"
addopts = "--cov=bot --cov-report=term --cov-report xml"

[tool.coverage.run]
omit = [
    "bot/ui/__init__.py",
    "bot/ui/main_window_ui.py",
    "bot/ui/record.py",
    "bot/ui/modals.py",
    "main.py",
    "tests",
    "bot/utils/logger.py",
]

[tool.pyright]
exclude = ["**/tests/**", ".venv", "build"]

[project.gui-scripts]
bot-gui = "bot:main"
